# zmk_encoder

./: CMakeLists.txt  Kconfig  README.md  west.yml
dts/bindings/: zmk,behavior-ec-msc.yaml  zmk,behavior-sensor-adapter.yaml
include/behaviors/: ec_msc.h
src/: behavior_ec_msc.c  behavior_encoder_mouse_scroll.c  behavior_sensor_adapter.c
zephyr/: module.yml
